<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rlInstruction"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/inst_none"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/instruction"
            android:layout_width="400dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="71dp"
            android:maxLines="3"
            android:singleLine="false"
            android:text="@string/instructionMsg"
            android:textColor="#6B726D"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/closeinc"
            android:layout_alignLeft="@+id/instruction"
            android:text="@string/instructionTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#19833C"
            android:textSize="30sp" />

        <com.seemoreinteractive.seemoreinteractive.helper.PressedBgImageView
            android:id="@+id/closeinc"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_above="@+id/instruction"
            android:layout_marginBottom="27dp"
            android:layout_toRightOf="@+id/instruction"
            android:contentDescription="@string/imgContentDesc"
            android:src="@drawable/close_instruction" />

    </RelativeLayout>

</RelativeLayout>