<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" 
    >

    <RelativeLayout
        android:id="@+id/bgRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cad4d9"
        android:orientation="vertical"
        android:focusableInTouchMode="true" >

        <include
            android:id="@+id/include1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            layout="@layout/layout_header" />

        <include
            android:id="@+id/include2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            layout="@layout/layout_footer_menu" />

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/include2"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/include1" >

            <TextView
                android:id="@+id/txtProdImageName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/bigImageWithName"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@+id/bigImageWithName"
                android:textColor="#000000"
                android:textSize="25sp" />


            <TextView
                android:id="@+id/txtProdImagePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtProdImageName"
                android:layout_below="@+id/txtProdImageName"
                android:layout_marginTop="10dp"
                android:text="@string/strProdImageSale"
                android:textColor="#000000"
                android:textSize="22sp" />

            <HorizontalScrollView
                android:id="@+id/horizScrViewCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" >

                <LinearLayout
                    android:id="@+id/horizScrViewCategoriesLinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>

            <RelativeLayout
                android:id="@+id/bigImageWithName"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/horizScrViewCategories"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imgvProdDetailsBigImg"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY" 
                    />

                <ZoomButton
                    android:id="@+id/zoomButton1"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/imgvProdDetailsBigImg"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:scaleType="fitCenter"
                    android:src="@android:drawable/btn_plus" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txtvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtProdImagePrice"
                android:layout_below="@+id/txtProdImagePrice"
                android:layout_marginTop="22dp"
                android:text="Quantity"
                android:textColor="#000000"
                android:textSize="22sp" />

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="wrap_content"
                android:layout_height="700dp"
                android:layout_below="@+id/bigImageWithName"
                android:background="#FFFFFF" >

                <LinearLayout
                    android:id="@+id/llCategoryForAttributes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:visibility="invisible"
                    >
						<RelativeLayout
						    android:id="@+id/btnColorLayout"
                            android:layout_width="200dp"
                            android:layout_height="60dp"
                            android:orientation="horizontal"                            
                            android:background="@drawable/pd_client_horiz_bg" >

                    <TextView
                        android:id="@+id/txtvColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="Color"
                        android:textSize="20sp" 
                       	android:textColor="#747474"
                       	android:textStyle="bold"
                       	/>

                     <TextView
                        android:id="@+id/txtvColorCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/txtvColor"
                        android:layout_below="@+id/txtvColor"   
                        android:layout_centerHorizontal="true"                     
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="2dp"
                        android:visibility="visible"/> 

				</RelativeLayout>
				
						
							<RelativeLayout
						    android:id="@+id/btnSizeLayout"
                            android:layout_width="200dp"
                            android:layout_height="60dp"
                            android:orientation="horizontal"                            
                            android:background="@drawable/pd_client_horiz_bg" >

                    <TextView
                        android:id="@+id/txtvSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="Size"
                        android:textSize="20sp" 
                        android:textStyle="bold"
                       	android:textColor="#747474"/>

                    <TextView
                        android:id="@+id/txtvSizeCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/txtvSize"
                        android:layout_below="@+id/txtvSize"
                        android:text=""
                        android:layout_marginTop="5dp"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        android:visibility="invisible"/>

				</RelativeLayout>
                  <!--   <com.seemoreinteractive.seemoreinteractive.helper.PressedBgButton
                        android:id="@+id/btnSize"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:background="@drawable/pd_client_horiz_bg"
                        android:text="Size"
                        android:textSize="20sp" /> -->

                    <com.seemoreinteractive.seemoreinteractive.helper.PressedBgButton
                        android:id="@+id/btnQuantity"
                        android:layout_width="200dp"
                        android:layout_height="60dp"
                        android:background="@drawable/pd_client_horiz_bg"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ViewFlipper
                    android:id="@+id/viewFlipperAttributeVals"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/llCategoryForAttributes"
                    android:layout_centerVertical="true" 
                    android:visibility="invisible">

                    <HorizontalScrollView
                        android:id="@+id/horizScrViewQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pd_quantity_num_bg"
                        android:scrollbars="none"
                        android:visibility="invisible" >

                        <LinearLayout
                            android:id="@+id/horizScrViewQuantityLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >
                        </LinearLayout>
                    </HorizontalScrollView>

                    <HorizontalScrollView
                        android:id="@+id/horizScrViewSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pd_quantity_num_bg"
                        android:scrollbars="none"
                        android:visibility="invisible" >

                        <LinearLayout
                            android:id="@+id/horizScrViewSizeLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >
                        </LinearLayout>
                    </HorizontalScrollView>

                    <HorizontalScrollView
                        android:id="@+id/horizScrViewColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/pd_quantity_num_bg"
                        android:scrollbars="none"
                        android:visibility="visible" >

                        <LinearLayout
                            android:id="@+id/horizScrViewColorLinearLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal" >
                        </LinearLayout>
                    </HorizontalScrollView>
                </ViewFlipper>

                    <com.seemoreinteractive.seemoreinteractive.helper.PressedBgButton
                        android:id="@+id/btnBuyMore"
                        android:layout_width="250dp"
                        android:layout_height="60dp"
                        android:layout_alignBaseline="@+id/btnBuyNow"
                        android:layout_alignBottom="@+id/btnBuyNow"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="35dp"
                        android:background="@drawable/offer_redeem_button"
                        android:text="@string/strBtnBuyMore"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.seemoreinteractive.seemoreinteractive.helper.PressedBgButton
                        android:id="@+id/btnBuyNow"
                        android:layout_width="250dp"
                        android:layout_height="60dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="64dp"
                        android:layout_toRightOf="@+id/btnBuyMore"
                        android:background="@drawable/offer_redeem_button"
                        android:text="@string/strBtnBuyNow"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold" 
                        android:layout_marginLeft="30dp"/>

                    <TextView
                        android:id="@+id/txtvProdDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/btnBuyMore"
                        android:layout_below="@+id/viewFlipperAttributeVals"
                        android:textSize="30dp"
                        android:textColor="#000000"
                        android:text="" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txtvProdNotAvail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="66dp"
                android:text="@string/strProductsNotAvail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="invisible" />
         <EditText
                android:id="@+id/editvQuantity"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@+id/txtvQuantity"
                android:layout_alignBottom="@+id/txtvQuantity"
                android:layout_toRightOf="@+id/txtvQuantity"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:text="1"
                android:textSize="20dp" 
                android:layout_marginLeft="15dp"/>


        </RelativeLayout>

    
    </RelativeLayout>

</ScrollView>